{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 39,
  "lineage": "96c7c7ea-a14c-9ac0-c79c-af89352ff2c3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:ec2:us-east-1:851725507012:instance/i-00a63433f523c603c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a63433f523c603c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "AWS_KEY",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a5aef2527c5c139e",
            "private_dns": "ip-10-10-1-134.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.134",
            "public_ip": "44.193.82.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0379980912a46f9c6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fc8a809a7e890c78",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04ea19eb16808bc33"
            ]
          },
          "dependencies": [
            "aws_security_group.demo-vpc-sg",
            "aws_subnet.demo_subnet",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725507012:internet-gateway/igw-009378e7740e713ac",
            "id": "igw-009378e7740e713ac",
            "owner_id": "851725507012",
            "tags": {
              "Name": "demo-igw"
            },
            "tags_all": {
              "Name": "demo-igw"
            },
            "vpc_id": "vpc-06ca4e5cd4772db31"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725507012:route-table/rtb-0a1b1cd8db2a02bb8",
            "id": "rtb-0a1b1cd8db2a02bb8",
            "owner_id": "851725507012",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-009378e7740e713ac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-rt"
            },
            "tags_all": {
              "Name": "demo-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ca4e5cd4772db31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demo-igw",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo-rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ae41b66b334057f",
            "route_table_id": "rtb-0a1b1cd8db2a02bb8",
            "subnet_id": "subnet-0fc8a809a7e890c78"
          },
          "dependencies": [
            "aws_internet_gateway.demo-igw",
            "aws_route_table.demo-rt",
            "aws_subnet.demo_subnet",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-vpc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725507012:security-group/sg-04ea19eb16808bc33",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ea19eb16808bc33",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "demo-vpc-sg",
            "name_prefix": "",
            "owner_id": "851725507012",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ca4e5cd4772db31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725507012:subnet/subnet-0fc8a809a7e890c78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc8a809a7e890c78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725507012",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo_subnet"
            },
            "tags_all": {
              "Name": "demo_subnet"
            },
            "vpc_id": "vpc-06ca4e5cd4772db31"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725507012:vpc/vpc-06ca4e5cd4772db31",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0c611b1848a1276ec",
            "default_route_table_id": "rtb-0318fbdd5f33ea58f",
            "default_security_group_id": "sg-00d1dd17a1b37a03c",
            "dhcp_options_id": "dopt-0f48cc8a83ac1a133",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06ca4e5cd4772db31",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0318fbdd5f33ea58f",
            "owner_id": "851725507012"
          }
        }
      ]
    }
  ]
}